--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=spb_houseforrent
 #Database
 spring.datasource.url=jdbc:mysql://localhost:3306/houseforrent?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Raisingthebar123!!/
+spring.datasource.password=0848101999
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA-Hibernate
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.hb2dll.auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-upload.path=D:\\image
+upload.path=C:\\images
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=125MB
 spring.servlet.multipart.max-request-size=125MB
