--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=spb_houseforrent
 #Database
 spring.datasource.url=jdbc:mysql://localhost:3306/houseforrent?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Raisingthebar123!!/
+spring.datasource.password=0848101999
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
