--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ spring.servlet.multipart.max-request-size=125MB
 spring.web.resources.static-locations=file:///${upload.path}
 
 spring.mvc.static-path-pattern=/static/**
+
+# email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thuenhahue@gmail.com
+spring.mail.password=fhgk abgs bcyi vrpc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
