--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,10 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.7.0</version> <!-- Chọn phiên bản phù hợp với dự án của bạn -->
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId> <!-- chuy mk thành mã băm -->
