--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,10 @@ spring.servlet.multipart.max-request-size=125MB
 spring.web.resources.static-locations=file:///${upload.path}
 
 spring.mvc.static-path-pattern=/static/**
+
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=nhathuynguyenhai@example.com
+spring.mail.password=nhathuy1999
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
