--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,10 @@ spring.web.resources.static-locations=file:///${upload.path}
 
 spring.mvc.static-path-pattern=/static/**
 
-spring.mail.host=smtp.example.com
+# email
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nhathuynguyenhai@example.com
-spring.mail.password=nhathuy1999
+spring.mail.username=thuenhahue@gmail.com
+spring.mail.password=fhgk abgs bcyi vrpc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
