--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=spb_houseforrent
 spring.datasource.url=jdbc:mysql://localhost:3306/houseforrent?createDatabaseIfNotExist=true
 spring.datasource.username=root
 
-spring.datasource.password=0848101999
+spring.datasource.password=Raisingthebar123!!/
 
 
 
